samples/_failures_safe/1761294489_efae0e_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3c2f0fe4.c: In function ‘main’:
./samples/SAFE/__tmp_3c2f0fe4.c:136:9: error: expected declaration or statement at end of input
  136 |         return 1;
      |         ^~~~~~
./samples/SAFE/__tmp_3c2f0fe4.c:136:9: error: expected declaration or statement at end of input
